=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.06 - In Development

=over

Fixed bug in ElementEditor/edit.base.tmpl which caused Done button
to be missing from any container element not set to allow_delete => 1.
[Noam Weinstein]

=item *

Fixed bug in BrowserSpeedBoost that did not clear out old compressed HTML
files or regenerate new minified/compressed assets if the underlying file
changed. [Michael Peters]

=item *

Various fixes to PoorText to make it play nicely with IE8. [Bodo
Schulze]

=item *

Upgraded Prototype.js to version 1.6.1_rc2 to fix issues with
IE8. [Bodo Schulze]

=item *

Fixed utf8 bug in Krang template generation and filtering. [Bodo
Schulze]

=item *

Added "Preview Editor" instrumenting previewed stories with links
pointing back into the CMS. Also integrates the previously added
"Template Finder". [Bodo Schulze]

=item *

Fixed ISE that occurs if you try to check out a story that was checked out by someone
else while you were looking at (normally prevented by the UI). Now you get a helpful
alert message instead. [Michael Peters]

=back

=head2 3.05 - March 15, 2009

=over

=item *

Fixed bug in L<Krang::BulkEdit::Xinha> where empty tags were not
handled correctly (thanks to Mike Lampson for catching this). Added
method returning a list of supported empty HTML tags. This list
currently contains only HR. [Bodo Schulze]

=item *

Add F<bin/krang_tmp_cleaner> to clean out the F<tmp/> directory while
developing. [Michael Peters]

=item  *

Added F<bin/krang_create_story> for making test data while
developing. [Michael Peters]

=item *

Added Fedora 10 as a target build platform. [Michael Peters]

=item *

Fixed a bug preventing to add a photo to a new contributor when coming
from associate contrib. [Bodo Schulze]

=item *

Added thumbnail preview to L<Krang::ElementClass::MediaLink> and
contrib edit screen. [Bodo Schulze]

=item *
